--- a/environment_linux.yml
+++ b/environment_linux.yml
@@ -5,6 +5,7 @@ channels:
 dependencies:
   - _anaconda_depends=2019.03
   - _libgcc_mutex=0.1
+  - _py-xgboost-mutex=2.0
   - alabaster=0.7.12
   - anaconda=custom
   - anaconda-client=1.7.2
@@ -12,7 +13,7 @@ dependencies:
   - appdirs=1.4.3
   - asn1crypto=1.3.0
   - astroid=2.3.3
-  - astropy=4.0
+  - astropy=4.0.1.post1
   - atomicwrites=1.3.0
   - attrs=19.3.0
   - babel=2.8.0
@@ -31,9 +32,9 @@ dependencies:
   - boto=2.49.0
   - bottleneck=1.3.2
   - bzip2=1.0.8
-  - ca-certificates=2020.1.1
+  - ca-certificates=2020.4.5.1
   - cairo=1.14.12
-  - certifi=2019.11.28
+  - certifi=2020.4.5.1
   - cffi=1.14.0
   - chardet=3.0.4
   - click=7.0
@@ -84,6 +85,7 @@ dependencies:
   - idna=2.8
   - imageio=2.6.1
   - imagesize=1.2.0
+  - importlib-metadata=1.5.0
   - importlib_metadata=1.5.0
   - intel-openmp=2019.4
   - ipykernel=5.1.4
@@ -113,13 +115,17 @@ dependencies:
   - lazy-object-proxy=1.4.3
   - ld_impl_linux-64=2.33.1
   - libarchive=3.3.3
+  - libblas=3.8.0
+  - libcblas=3.8.0
   - libcurl=7.68.0
   - libedit=3.1.20181209
   - libffi=3.2.1
   - libgcc-ng=9.1.0
   - libgfortran-ng=7.3.0
   - libiconv=1.15
+  - liblapack=3.8.0
   - liblief=0.9.0
+  - libllvm8=8.0.1
   - libpng=1.6.37
   - libsodium=1.0.16
   - libssh2=1.9.0
@@ -128,11 +134,13 @@ dependencies:
   - libtool=2.4.6
   - libuuid=1.0.3
   - libxcb=1.13
+  - libxgboost=1.0.2
   - libxml2=2.9.9
   - libxslt=1.1.33
   - llvmlite=0.31.0
   - locket=0.2.0
   - lxml=4.5.0
+  - lz4=2.1.6
   - lz4-c=1.8.1.2
   - lzo=2.10
   - markupsafe=1.1.1
@@ -166,7 +174,7 @@ dependencies:
   - numpydoc=0.9.2
   - olefile=0.46
   - openpyxl=3.0.3
-  - openssl=1.1.1d
+  - openssl=1.1.1g
   - packaging=20.3
   - pandas=0.25.3
   - pandoc=2.2.3.2
@@ -191,11 +199,14 @@ dependencies:
   - pluggy=0.13.1
   - ply=3.11
   - prometheus_client=0.7.1
+  - prompt-toolkit=3.0.5
   - prompt_toolkit=3.0.3
   - psutil=5.7.0
+  - pthread-stubs=0.4
   - ptyprocess=0.6.0
   - py=1.8.1
   - py-lief=0.9.0
+  - py-xgboost=1.0.2
   - pycodestyle=2.5.0
   - pycosat=0.6.3
   - pycparser=2.19
@@ -221,9 +232,10 @@ dependencies:
   - python=3.7.6
   - python-dateutil=2.8.1
   - python-libarchive-c=2.8
+  - python_abi=3.7
   - pytz=2019.3
   - pywavelets=1.1.1
-  - pyyaml=5.3
+  - pyyaml=5.3.1
   - pyzmq=18.1.1
   - qt=5.9.7
   - qtawesome=0.6.1
@@ -287,9 +299,12 @@ dependencies:
   - widgetsnbextension=3.5.1
   - wrapt=1.11.2
   - wurlitzer=2.0.0
+  - xgboost=1.0.2
   - xlrd=1.2.0
   - xlsxwriter=1.2.7
   - xlwt=1.3.0
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
   - xz=5.2.4
   - yaml=0.1.7
   - zeromq=4.3.1
@@ -299,6 +314,8 @@ dependencies:
   - zstd=1.3.7
   - pip:
     - lasio==0.24.1
+    - rfpimp==1.3.4
+    - sklearn==0.0
     - yellowbrick==1.1
 prefix: /home/bendowdell/anaconda3/envs/pdda
 
