--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 *.joblib filter=lfs diff=lfs merge=lfs -text
-pickles/*.joblib filter=lfs diff=lfs merge=lfs -text
+pickles/**.joblib filter=lfs diff=lfs merge=lfs -text
